[package]
name = "mini-web-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
scraper = "0.12.0"
actix-web = "4.0.0"
handlebars = { version = "4.2.2", features = ["dir_source"] }
serde_json = "1.0"
serde = "1.0.136"
serde_derive = "1.0.136"
ammonia = "3"
